# look-it-from-here

./: .env  .env.example  .gitignore  pyproject.toml  reverse_tree.json  reverse_tree_output.txt  test_reverse_tree.py  test_xml.py
docs/: LOOK_IT_FROM_HERE.md  LOOK_IT_FROM_HERE_DETAILED.md  README.md  reverse_tree.md
notebooks/: output.json  output.xml  science_mode.ipynb  test.ipynb  test_google.ipynb
src/look_it_from_here/: __init__.py  dom_node.py  html_display_node.py  html_tree_node.py  interfaces.py  pipeline.py  playwright_implementation.py  semantic_node.py  snapshot.py
src/look_it_from_here/adapter/: playwright_implementation.py
src/look_it_from_here/core/: constants.py  dom_node.py  element_selector.py  embeddings.py  semantic_node.py  snapshot.py
src/look_it_from_here/core/transform/: __init__.py
src/look_it_from_here/core/transform/dom_extraction/: __init__.py  extract_dom_structure.py  filter_hidden_elements.py  filter_non_visual.py  pipeline.py  propagate_visibility.py
src/look_it_from_here/passes/: build_dom_tree.py  collapse.py  content_filter.py  convert_to_display_nodes.py  convert_to_semantic_leafs.py  extract_dom_structure.py  filter_hidden_elements.py  filter_invisible.py  filter_non_visual.py  flatten_text_only_elements.py  normalize_attributes.py  propagate_visibility.py  remove_empty_containers.py  remove_empty_elements.py  remove_meaningless_elements.py  remove_single_child_wrappers.py  render.py
src/look_it_from_here/renders/: __init__.py  a.py  base.py  button.py  img.py  input.py  roles.py  textarea.py  utils.py
(+9 files in other folders)
