[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "look-it-from-here"
version = "0.1.0"
description = "Reverse tree embeddings for natural language web automation"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["look_it_from_here*"]
exclude = ["tests*"]